--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,10 +3,9 @@ name = "hivetools"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.12"
 dependencies = [
-    "beem>=0.24.26",
-    "hiveengine>=0.2.2",
-    "python-dotenv>=1.0.1",
-    "steemengine>=0.5.3",
+    "beem",
+    "hiveengine",
+    "python-dotenv",
 ]
